Fixed layout issue in mobile view

--- a/src/GallaryItem.css
+++ b/src/GallaryItem.css
@@ -95,12 +95,13 @@
         order: 1;
         flex: 0 0 100%;
         width: 100%;
-        height: auto;
+        height: 60vh;
     }
 
     .gallery-item-main-img {
         max-width: 100%;
-        max-height: 70vh;
+        max-height: 100%;
+        object-fit: contain;
     }
 
     /* prev button */
